[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvidia-nemoguard-content-safety-v0"
version = "0.1.0"
description = "WSO2 AI Gateway NeMo Guard content safety policy for the Python executor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nvidia_nemoguard_content_safety_v0"]

[tool.hatch.build.targets.wheel.force-include]
"policy-definition.yaml" = "nvidia_nemoguard_content_safety_v0/policy-definition.yaml"

[tool.hatch.build.targets.sdist]
only-include = [
  "src/nvidia_nemoguard_content_safety_v0",
  "pyproject.toml",
  "policy-definition.yaml",
  "README.md",
]
